fix: 🐛 update quick links to anchor menu and aligned text
changed name from quick links to anchor menu and aligned text to the
left

✅ Closes: 469

--- a/packages/bootstrap4-theme/src/scss/extends/_cards.scss
+++ b/packages/bootstrap4-theme/src/scss/extends/_cards.scss
@@ -650,7 +650,7 @@ Cards - Table of Contents
     color: $uds-color-base-gray-7;
     padding: $uds-size-spacing-3 0;
     border-bottom: 1px solid $uds-color-base-gray-3;
-    text-align: center;
+    text-align: left;
     font-weight: 700;
 
     &:visited {
